fixed widget vertical spacing

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -59,6 +59,7 @@ body{
   width: 36px;
   float:left;
   padding-top: 5px;
+  margin-right: 30px;
 }
 
 .navbar-nav>li>a {
